--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,3 @@
 Wed 16 Dec 2015 09:55:38 GMT - Makefile and upload script
 Wed 16 Dec 2015 09:58:49 GMT - Updates to README.md
+Wed 16 Dec 2015 09:59:32 GMT - Updates to READM.md
